--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
-    open-in-view: false
+    open-in-view: true
   main:
     allow-bean-definition-overriding: true
   thymeleaf:
