swagger 적동 드디어 성공 (securityConfig 수정본 주석처리)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
     allow-bean-definition-overriding: true
   thymeleaf:
     cache: false
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
+
 
 jasypt:
   encryptor:
